platform/cluster/minio/provisioning/k8s/minio.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: minio-api.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9000
    - host: minio-ui.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-minio-console
                port:
                  number: 9001
